--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Jarrod Harris"
+date: "Summer 2025"
 output: html_document
 ---
 
@@ -16,11 +16,25 @@ you, if you change any of this the git program will notice it and compromise you
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
 
+’Twas brillig, and the slithy toves  
+      Did gyre and gimble in the wabe:  
+All mimsy were the borogoves,  
+      And the mome raths outgrabe.  
+“Beware the Jabberwock, my son!  
+  
+
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
+  
+  
+
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+  
+
+  
