--- a/poem.rmd
+++ b/poem.rmd
@@ -15,16 +15,23 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-
-’Twas brillig, and the slithy toves  
-      Did gyre and gimble in the wabe:  
-All mimsy were the borogoves,  
-      And the mome raths outgrabe.  
-“Beware the Jabberwock, my son!  
   
+’Twas brillig, and the slithy toves      
+Did gyre and gimble in the wabe:    
+All mimsy were the borogoves,    
+And the mome raths outgrabe.    
+“Beware the Jabberwock, my son!    
+    
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+
+When I go up through the mowing field,  
+The headless aftermath,  
+Smooth-laid like thatch with the heavy dew,  
+Half closes the garden path.  
+And when I come to the garden ground,    
+  
 
 
 ## Third Verse
